Skript-check gezielter ausschalten
Der Fehler tritt nur in den Zeilen mit anne.h.schneider auf, nicht in den
beiden Zeilen davor. Skript-check sollte nur so selten wie möglich
deaktiviert werden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2605 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -390,9 +390,11 @@
     \nolinkurl{<joerg@alea.gnuu.de>}} (2006/07)
    \item \href{mailto:mundhenk@informatik.uni-jena.de}{Martin Mundhenk
     \nolinkurl{<mundhenk@informatik.uni-jena.de>}} (2006)
-% skript-check aus
    \item \href{mailto:levitz@cs.fsu.edu}{Hilbert Levitz
     \nolinkurl{<levitz@cs.fsu.edu>}} (2007)
+% skript-check aus
+% skript-check glaubt bei anne.h.schneider eine Abkürzung zu erkennen und regt
+% sich über fehlende Spatien auf.
    \item \href{mailto:anne.h.schneider@googlemail.com}{Anne Schneider
     \nolinkurl{<anne.h.schneider@googlemail.com>}} (2007)
 % skript-check an
