übervolle hboxen geleert
An einigen Stellen gab es die Meldung "Overfull hbox" von LaTeX. Ich
habe den Satzbau so umgestellt, dass die Meldungen
verschwinden. Einige Stellen sind noch offen. Die müssen noch genauer
geprüft werden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2610 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -359,9 +359,9 @@ Sei $\Omega$ eine Menge.
 \begin{enumerate}
  \item $\AO(\R^{n})=\Set{f\colon\R^{n}\rightarrow\R^{n} | \norm{f(x)-f(y)}=
   \norm{x-y} \forall x,y\in\R^{n}}$ Bewegungsgruppe.
- \item Symmetriegruppe des
-  regelmäßigen $n$"~Ecks $P_{n}$ mit $G=\Set{f\in\AO(\R^{2}) | f(P_{n})=
-  P_{n}}$ \textsc{Dieder}gruppe. Die Gruppe hat $2n$~Elemente.\\
+ \item Die Symmetriegruppe des regelmäßigen $n$"~Ecks $P_{n}$ wird als
+   \highl{Diedergruppe} mit $G=\Set{f\in\AO(\R^{2}) | f(P_{n})=
+  P_{n}}$ bezeichnet.. Die Gruppe hat $2n$~Elemente.\\
 \begin{tikzpicture}[thick,
 information text/.style={rounded corners,fill=red!10,inner sep=1ex}]
 \draw (60:4ex) -- (120:4ex) -- (180:4ex) -- (240:4ex) -- (300:4ex)
@@ -392,9 +392,12 @@ information text/.style={rounded corners,fill=red!10,inner sep=1ex}]
 
 \section{Algebra}
 
-Sei $L|K$ eine Körpererweiterung. Diese besitzt eine \textsc{Galois}gruppe
-$\F(L|K)=\Set{f\colon L\rightarrow L | f \text{ Automorphismus von } L,
-f|K=\id_{K}}$.
+Sei $L|K$ eine Körpererweiterung. Diese besitzt eine
+\textsc{Galois}gruppe
+\begin{gather*}
+  \F(L|K)=\Set{f\colon L\rightarrow L | f \text{ Automorphismus von } L,
+    f|K=\id_{K}}  
+\end{gather*}
 
 \section{Topologie}
 \begin{enumerate}
@@ -658,7 +661,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 	   1 & 2 & \dotso & n
 	 \end{pmatrix}
     \end{gather*}
-   \item Sei $K$ ein Körper und $n\in\N$. Dann ist $U(K^{n\times n},
+   \item Sei $K$ ein Körper und $n\in\N$. Dann ergibt sich die
+     Einheitengruppe von $(K^{n\times n}, \cdot)$ durch
+     $U(K^{n\times n},
     \cdot)=\Set{A\in K^{n\times n} | \det A\neq0}=\colon\GL(n,K)$.
    \item Für jede nichtleere Familie $(G_{i})_{i\in I}$ von Gruppen $G_{i}$.
     Dann ist auch das \highl[Produkt!direktes]{direkte Produkt} $\prod_{i\in
@@ -786,7 +791,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
       V$. Im Fall $uv\in V$ wäre $u=uvv^{-1}\in V$. \lightning{} Also muss
       $uv\in U$ sein und $v=u^{-1}uv\in U$. Daher ist $V\subseteq U$.\\
       "`$\Leftarrow$"' ist trivial.
-     \item $UV\leq G\Rightarrow(UV)=(UV)^{-1}= V^{-1}U^{-1}=VU$ und für
+     \item Sei $UV\leq G$. Dann ist $(UV)=(UV)^{-1}= V^{-1}U^{-1}=VU$ und für
       $UV=VU$ folgt: $(UV)(UV)^{-1}= UVV^{-1}U^{-1}\subseteq UVU$ nach
       \autoref{bem:32} und wegen der Kommutativität gilt: $UVU=UUV=UV$.
       Somit ist $UV$ eine Untergruppe.
@@ -845,7 +850,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
    \item Wenn $U\leq G$, dann ist $f(U)=\Set{f(u) |  u\in U}\leq H$.
     Insbesondere ist $\Bld(f)\coloneq f(G)\leq H$.
    \item $V\leq H\Rightarrow f^{-1}(V)= \Set{g\in G |  f(g)\in V}\leq G$.
-    Insbesondere ist $\ker(f)\coloneq f^{-1}(\{1_{H}\})\leq G$.
+    Insbesondere ist der Kern von $f$, definiert durch
+    $\ker(f)\coloneq f^{-1}(\{1_{H}\})$, eine Untergruppe von $G$.
    \item $U\leq G\Rightarrow f^{-1}(f(U))= U(\ker f)= (\ker f)U$ oder $V\leq
     H\Rightarrow f(f^{-1}(V))= V\cap\Bld f$.
    \item Wir haben zueinander inverse Bijektionen $\FU=\Set{U\leq G |\ker
@@ -1322,7 +1328,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
    \item Für jede Familie $(N_{i})_{i\in I}$ von Normalteilern $N_{i}$  einer
     Gruppe $G$ sind auch $\bigcap_{i\in I} N_{i}$ und $\langle N_{i}\colon
     i\in I\rangle\coloneq\langle\bigcup_{i\in I} N_{i}\rangle$ normal in $G$.
-   \item Für jede Gruppe $G, \alpha\in\Aut(G)$ und $a,x\in G$ gilt:
+   \item Für jede Gruppe $G$, jeden Automorphismus $\alpha\in\Aut(G)$ und $a,x\in G$ gilt:
     $(\alpha\circ\ad_{a}\circ\alpha^{-1})(x)= \alpha(a\alpha^{-1}(x)a^{-1})=
     \alpha(a) \alpha(\alpha^{-1}(x))\alpha(a)^{-1}= \ad_{\alpha(a)} (x)$,
     d.\,h.
@@ -1579,9 +1585,17 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{bemerk}
 
 \begin{bsp}
-  Ist $G$ beliebig und $\Omega=\End G$ (bzw. $\Omega=\Aut G$ bzw. $\Omega=\Inn
-  G$), so sind die $\Omega$"~Untergruppen von $G$ genau die vollinvarianten
-  (bzw. charakteristischen bzw. normalen) Untergruppen von $G$. 
+  \begin{itemize}
+  \item Ist $G$ beliebig und $\Omega=\End G$, so sind die
+    $\Omega$"~Untergruppen von $G$ genau die vollinvarianten
+    Untergruppen von $G$.
+  \item Ist $G$ beliebig und $\Omega=\Aut G$, so sind die
+    $\Omega$"~Untergruppen von $G$ genau die charakteristischen
+    Untergruppen von $G$.
+  \item Ist $G$ beliebig und $\Omega=\Inn G$, so sind die
+    $\Omega$"~Untergruppen von $G$ genau die normalen Untergruppen von
+    $G$.
+  \end{itemize}
 \end{bsp}
 
 %def 4.10
@@ -1627,7 +1641,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
        G_{l}=1
   \end{gather}
   einer Gruppe $G$ heißt \highl{Subnormalreihe} von $G$ der \highl{Länge} $l$
-  mit \highl{Faktor}en $G_{0}/G_{1},\dotsc, G_{l-1}/G_{l}$. Ist
+  mit \highl{Faktor}en $G_{0}/G_{1}$ bis $G_{l-1}/G_{l}$. Ist
   $G_{i}\trianglelefteq G$ für alle $i$, dann heißt \autoref{eq:51}
   \highl{Normalreihe}. Ist $G_{i-1}\neq G_{i}$ für alle $i$, dann heißt
   \autoref{eq:51} eine \highl[Subnormalreihe!ohne Wiederholung]{(Sub)normalreihe ohne
@@ -1794,7 +1808,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
       (\autoref{satz:43-1isosatz}). Der Rest des Satzes lässt sich mit dem
       gleichen Satz beweisen.
      \item Wegen $G_{i}\trianglelefteq G_{i-1}$ ist $G_{i}N/N\trianglelefteq
-      G_{i-1}N/N$ (Anwendung des Homomorphismus nach \autoref{bsp:41}~(vi)).
+      G_{i-1}N/N$ durch die Anwendung des Homomorphismus nach \autoref{bsp:41}~(vi).
       Ferner ist $G_{i-1}N/G_{i}N= G_{i-1}(G_{i}N)/G_{i}N\cong_{\Omega}
       G_{i-1}/G_{i-1}\cap G_{i}N$ nach \autoref{satz:43-1isosatz}.
       \todo{Ausdrücke prüfen}
@@ -1810,7 +1824,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{defini}
 
 \begin{bemerk}
-  Mit $\Omega\coloneq\Inn G$ sind also die normalen Endomorphismen von $G$
+  Mit $\Omega\coloneq\Inn G$ sind die normalen Endomorphismen von $G$
   die $\Omega$"~Endomorphismen von $G$. Ferner ist ein $\alpha\in\End G$
   genau dann normal, wenn gilt: $x^{-1}\alpha(x)\alpha(y)=
   \alpha(y)x^{-1}\alpha(x)$ für alle $x,y\in G$ ist\todo{Nachrechnen}, d.\,h.
@@ -2184,7 +2198,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     \alpha(\vorhoch{\omega}g) \beta(\vorhoch{\omega}g)=
     (\alpha+\beta)(\vorhoch{\omega}g)$.
    \item Es heißen $\alpha_{1},\dotsc,\alpha_{n}\in\End G$ \highl{paarweise
-    addierbar}, falls die $\alpha_{i}, \alpha_{j}$ für alle $i$ ungleich $j$
+    addierbar}, falls die $\alpha_{i}, \alpha_{j}$ für alle $i\neq j$
     addierbar sind. Gegebenenfalls ist $\alpha_{1}+\dotsb+\alpha_{n}\colon
     G\rightarrow G$ mit $g\mapsto\alpha_{1}(g),\dotsc,\alpha_{n}(g)$ ein
     Endomorphismus von $G$ und für $i=1,\dotsc,n-q$ gilt:
@@ -2238,13 +2252,16 @@ Codierungstheorie, \textsc{Banach}räume etc.
     und addierbar mit $\alpha'+\beta'= (\alpha+\beta)^{-1}\circ(\alpha+\beta)=
     \id_{G}$.
 
-    Für $g\in G$ gilt also: $\alpha'(\beta'(g))= \alpha'(\alpha'(g^{-1})
-    \alpha'(g)\beta'(g))= \alpha'(\alpha'(g^{-1})(\alpha'+\beta')(g))=
-    \alpha'(\alpha'(g^{-1})g)= \alpha'(\alpha'(g^{-1})) \alpha'(g)=
-    \alpha'(\alpha'(g^{-1})) (\alpha'+\beta')(\alpha'(g))=
-    \alpha'(\alpha'(g^{-1})) \alpha'(\alpha'(g)) \beta'(\alpha'(g))=
-    \beta'(\alpha'(g))$.
-
+    Für $g\in G$ gilt also:
+    \begin{align*}
+      \alpha'(\beta'(g)) &=
+      \alpha'(\alpha'(g^{-1})\alpha'(g)\beta'(g))=
+      \alpha'(\alpha'(g^{-1})(\alpha'+\beta')(g))\\
+      &= \alpha'(\alpha'(g^{-1})g)= \alpha'(\alpha'(g^{-1})) \alpha'(g)=
+      \alpha'(\alpha'(g^{-1})) (\alpha'+\beta')(\alpha'(g))\\
+      &= \alpha'(\alpha'(g^{-1})) \alpha'(\alpha'(g)) \beta'(\alpha'(g))=
+      \beta'(\alpha'(g))
+    \end{align*}
     Falls beide Summanden keine Automorphismen sind, dann wären $\alpha',
     \beta'$ nilpotent nach der \autoref{bem:65}. Das heißt $(\alpha')^{n}= 0=
     (\beta')^{n}$ für ein $n\in\N$. Dann wäre die Identität auf $G$:
@@ -2303,8 +2320,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
     $\overline{\epsilon_{i}\circ\eta_{i}}\in\Aut_{\Omega}(G_{i})$ annehmen.
 
     Nun behaupten wir: $H_{i}= \eta_{i}(G_{i})\oplus(\ker(\epsilon_{i})\cap
-    H_{i})$. Da $\epsilon_{i}$ und $\eta_{i}$ normal und
-    $\Omega$"~Endomorphismen sind, sind $\eta_{i}(G_{i})$ und
+    H_{i})$. Da $\epsilon_{i}$ und $\eta_{i}$ $\Omega$"~Endomorphismen und normal
+     sind, sind $\eta_{i}(G_{i})$ und
     $\ker(\epsilon_{i})\cap H_{i}$ beide $\Omega$"~Normalteiler von $G$. Ist
     $g\in G_{i}$ mit der Eigenschaft
     $1=\epsilon_{i}(\eta_{i}(g))=\overline{\epsilon_{i}\circ\eta_{i}}(g)=g$,
@@ -2795,10 +2812,11 @@ Codierungstheorie, \textsc{Banach}räume etc.
     \begin{enumerate}
     \item Für beliebige $a,a'\in A, b\in B$ gilt nach
       \autoref{bem:81} (iv):
-      \begin{gather*}
-        a[a',b]a^{-1}= aa'b(a')^{-1}b^{-1}a^{-1}=
-        aa'b(a')^{-1}a^{-1}b^{-1}bab^{-1}a^{-1} = [aa',b][a,b]^{-1}\in[A,B]  
-      \end{gather*}
+      \begin{align*}
+        a[a',b]a^{-1} &= aa'b(a')^{-1}b^{-1}a^{-1}=
+        aa'b(a')^{-1}a^{-1}b^{-1}bab^{-1}a^{-1}\\
+        &= [aa',b][a,b]^{-1}\in[A,B]  
+      \end{align*}
       Also gilt auch:
       $a[A,B]a^{-1}\subseteq[A,B]$. Analog ist $b[A,B]b^{-1}\subseteq[A,B]$.
      \item $[A,B]\leq A\Rightarrow\forall a\in A\,\forall b\in B\colon
@@ -2823,8 +2841,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
    \item $[X_{1},\dotsc, X_{n}]$ enthält alle Elemente der Form
     $[x_{1},\dotsc, x_{n}]$ mit $x_{1}\in X_{1},\dotsc, x_{n}\in X_{n}$. Aber
     es wird nicht unbedingt von diesen erzeugt.
-   \item Für jeden Gruppenhomomorphismus $f\colon G\rightarrow H$ ist
-    $f([X_{1},\dotsc, X_{n}])= [f(X_{1}),\dotsc,f(X_{n})]$.
+   \item Für jeden Gruppenhomomorphismus $f\colon G\rightarrow H$
+     haben wir die Gleichheit von 
+    $f([X_{1},\dotsc, X_{n}])$ und $[f(X_{1}),\dotsc,f(X_{n})]$.
   \end{enumerate}
 \end{bemerk}
 
@@ -3470,9 +3489,10 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 %def 10.5
 \begin{defini}[Stabilisator]
-  Für jede Gruppe $G$, jede $G$"~Menge $\Omega$ und $\omega\in\Omega$ heißt
+  Für jede Gruppe $G$, jede $G$"~Menge $\Omega$ und $\omega\in\Omega$
+  ist der \highl{Stabilisator} von $\omega$ in $G$ gegeben durch
   $\Stb_{G}(\omega)\coloneq G_{\omega}\coloneq\Set{g\in
-    G | \vorhoch{g}\omega=\omega}$ \highl{Stabilisator} von $\omega$ in $G$.
+    G | \vorhoch{g}\omega=\omega}$.
 \end{defini}
 
 \begin{satz}\label{satz:105}
@@ -4030,9 +4050,11 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Zwei Elemente in $\Sym(n)$ sind genau dann konjugiert, wenn sie den gleichen
   Typ haben.
   \begin{proof}
-    Für die Richtung "`$\Rightarrow$"' sei $a\in\Sym(n)$ mit
-    Zyklenschreibweise: $a=(x_{1},\dotsc, x_{k})(y_{1},\dotsc, y_{l})\dotso $.
-    Für $g\in\Sym(n)$ ist dann $gag^{-1}= (g(x_{1}),g(x_{2}),\dotsc,g(x_{k}))
+    Zunächst betrachen wir die Richtung von links nach rechts
+    ("`$\Rightarrow$"'). Dazu sei
+    $a\in\Sym(n)$ mit der 
+    Zyklenschreibweise $a=(x_{1},\dotsc, x_{k})(y_{1},\dotsc,
+    y_{l})\dotso$ und für $g\in\Sym(n)$ ist dann $gag^{-1}= (g(x_{1}),g(x_{2}),\dotsc,g(x_{k}))\cdot
     (g(y_{1}),\dotsc,g(y_{l}))$. Denn beispielsweise ist
     $(gag^{-1})(g(x_{1}))= (ga)(x_{1})= g(x_{2})$.
 
@@ -4085,9 +4107,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 %bem 12.3
 \begin{bemerk}
-  Offenbar wird $\Sym(n)$ von allen Zyklen erzeugt. Wegen $(x_{1},\dotsc,
-  x_{k})= (x_{1},x_{k})(x_{1},x_{k-1})\dotso (x_{1},x_{2})$ wird $\Sym(n)$
-  auch von den 2"~Zyklen (oder \highl{Transposition}en) erzeugt. Wegen $(i,j)=
+  Offenbar wird $\Sym(n)$ von allen Zyklen erzeugt. Die Gruppe
+  $\Sym(n)$ wird wegen der Beziehung $(x_{1},\dotsc,
+  x_{k})= (x_{1},x_{k})(x_{1},x_{k-1})\dotso (x_{1},x_{2})$  von den 2"~Zyklen (oder \highl{Transposition}en) erzeugt. Wegen $(i,j)=
   (1,i)(1,j)(1,i)$ genügen sogar die Transpositionen
   $(1,2),(1,3),\dotsc,(1,n)$. Wegen $(1,i)= (i-1,i)\dotso
   (2,3)(1,2)(2,3)\dotso (i-1,i)$ genügen analog auch die so genannten
@@ -4189,7 +4211,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   20$ Elemente.
 
   Die Konjugationsklasse von $(1,2,3,4,5)$ in $S$  enthält
-  $\frac{5!}{1!5^{1}}= 24$ Elemente. Daher: $\abs{C_{S}((1,2,3,4,5))}=5$ und
+  $\frac{5!}{1!5^{1}}= 24$ Elemente. Daher ist $\abs{C_{S}((1,2,3,4,5))}=5$ und
   $C_{S}((1,2,3,4,5))= \langle(1,2,3,4,5)\rangle\subseteq A$. Also zerfällt
   die Konjugationsklasse von $(1,2,3,4,5)$ in $S$ in zwei Konjugationsklassen
   der Länge $12$ in $A$. Zur Probe: $1+15+20+12+12=60$ Elemente.
@@ -4203,9 +4225,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 %bem 12.6
 \begin{bemerk}
-  Für $n\geq3$ operiert $\Alt(n)$ mehrfahch, oder genauer $(n-2)$"~transitiv
+  Für $n\geq3$ operiert $\Alt(n)$ mehrfach oder genauer $(n-2)$"~transitiv
   auf $\{1,\dotsc,n\} $, denn für paarweise verschiedene Elemente
-  $a_{1},\dotsc, a_{n}\in\{1,\dotsc,n\}$ gehört $
+  $a_{1},\dotsc, a_{n}\in\{1,\dotsc,n\}$ gehört entweder $
   \begin{pmatrix}
     1 & 2 & \dotso & n-2 & n-1 & n\\
     a_{1} & a_{2} & \dotso  & a_{n-2} & a_{n-1} & a_{n}
@@ -4325,7 +4347,8 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
     die $p$"~Gruppen, die $\pi$"~Elemente genau die $p$"~Elemente und die
     $\pi$"~Hallgruppen genau die $p$"~Sylowgruppen. Statt $\pi'$ schreibt man
     dann auch $p'$.
-   \item Im Allgemeinen ist $\Hall_{\pi}(g)=\emptyset$. Beispielsweise enthält
+   \item Im Allgemeinen ist $\Hall_{\pi}(g)=\emptyset$. Beispielsweise
+     enthält die alternierende Gruppe vom Grad~$5$
     $\Alt(5)$ keine $\{2,5\}$"~Hallgruppe $H$. Denn wegen
     $\abs{\Alt(5)}=60=2^{2} \cdot3\cdot5$ wäre die Ordnung von $H=20$ und der
     Index $3$. Dies würde einen nichttrivialen Homomorphismus
@@ -4453,8 +4476,8 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
       H^{*}N^{(n)}/N^{(n)}= (gN^{(n)})(HN^{(n)}/N^{(n)})(gN^{(n)})^{-1}=
 	 (gHg^{-1})N^{(n)}/N^{(n)}
     \end{gather*}
-    Das heißt, $H^{*}N^{(n)}= (gHg^{-1})N^{(n)}$. Daher: $H^{*},
-    gHg^{-1}\in\Hall_{\pi'}(H^{*}N^{(n)})$. Nach \autoref{satz:132} sind
+    Das heißt, $H^{*}N^{(n)}= (gHg^{-1})N^{(n)}$. Daher ist $H^{*},
+    gHg^{-1}\in\Hall_{\pi'}(H^{*}N^{(n)})$. Nach dem \autoref{satz:132} sind
     $H^{*}, gHg^{-1}$ in $H^{*}N^{(n)}$ konjugiert und wir sind in diesem Fall
     fertig.
 
@@ -4730,7 +4753,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
 \chapter{Lineare Gruppen}
 
 %satz 14.1
-\begin{satz}Lemma von \textsc{Iwasawa}]
+\begin{satz}[Lemma von \textsc{Iwasawa}]
   Sei $G$ eine perfekte Gruppe, $\underline{O}$ eine treue, primitive $G$"~Menge,
   $\alpha\in \underline{O}$ und $A$ ein auflösbarer Normalteiler von
   $H\coloneq\Stb_{G}(\alpha)$ mit $G=\langle gAg^{-1}\colon g\in G\rangle$.
@@ -4755,7 +4778,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
    \item  Seien $\KK$ ein Körper und $V$ ein endlich"=dimensionaler $\KK$"~Vektorraum.
   Dann gilt:
   \begin{gather*}
-    Z\coloneq\Set{\alpha\id_{V} |\alpha\in\KK^{*}}\subseteq Z(\GL(V))
+    Z\coloneq\Set{\alpha\id_{V} |\alpha\in\KK^{*}}\leq Z(\GL(V))
   \end{gather*}
   Denn für $g\in\GL(V), \alpha\in\KK^{*}, v\in V$ gilt:
   $(g(\alpha\id_{V})g^{-1})(v)= g(\alpha g^{-1}(v))= \alpha g(g^{-1}(v))=
@@ -4768,7 +4791,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
     $\PSL(V)\coloneq\SL(V)/(\SL(V)\cap Z)\cong\SL(V)Z/Z\leq\PGL(V)$ die
     \highl[Gruppe!projektive spezielle lineare Gruppe]{projektive spezielle
       lineare Gruppe} von $V$.
-   \item Für $n\in\N$ ist also
+   \item Für eine natürliche Zahl $n$ ist also
     $Z\coloneq\Set{\alpha1_{n} | \alpha\in\KK^{*}}\leq Z(\GL(n,\KK))$ und
     $\GL(n,\KK)/Z=\colon\PGL(n,\KK)$ heißt \highl[Gruppe!projektive allgemeine
     lineare Gruppe]{projektive allgemeine lineare Gruppe} des Grades $n$ über
