ngerman als Klassenoption verwendet
git-svn-id: https://svn.lug-jena.de/uni-skripte@2612 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -22,7 +22,7 @@
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
-\documentclass[halfparskip*,german,draft,twoside]{scrreprt}
+\documentclass[halfparskip*,ngerman,draft,twoside]{scrreprt}
 
 \usepackage{ifthen}
 \usepackage{index}
