Angaben in Bemerkung 6.3 sind korrekt, TODO entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2620 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1832,10 +1832,10 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Mit $\Omega\coloneq\Inn G$ sind die normalen Endomorphismen von $G$
   die $\Omega$"~Endomorphismen von $G$. Ferner ist ein $\alpha\in\End G$
   genau dann normal, wenn gilt: $x^{-1}\alpha(x)\alpha(y)=
-  \alpha(y)x^{-1}\alpha(x)$ für alle $x,y\in G$ ist\todo{Nachrechnen}, d.\,h.
-  wenn $x^{-1}\alpha(x)$ für $x\in G$ mit jedem Element in $\alpha(G)$
+  \alpha(y)x^{-1}\alpha(x)$ für alle $x,y\in G$, d.\,h.
+  wenn $x^{-1}\alpha(x)$ für alle $x\in G$ mit jedem Element in $\alpha(G)$
   vertauschbar ist. Insbesondere ist ein $\alpha\in\Aut G$ genau dann normal,
-  wenn $x^{-1}\alpha(x)$ im Zentrum von $G$ ist.
+  wenn $x^{-1}\alpha(x)$ für alle $x\in G$ im Zentrum von $G$ ist.
 \end{bemerk}
 
 \begin{bsp}
