--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -2010,8 +2010,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
 	$N=G$.
        \item Sei $H$ abelsch.  Für $1\neq a\in H$ ist dann $\langle
 	a\rangle=H$. Daher ist die Abbildung $f\colon \Z\rightarrow H$ mit
-	$k\mapsto a^{k}$ ein Epimorphismus. Folglich gilt $H\cong\Z/\ker f$
-	\todo{Link zum Homosatz einfuegen}.
+	$k\mapsto a^{k}$ ein Epimorphismus. Folglich gilt
+        $H\cong\Z/\ker f$ nach dem \autoref{satz:42}.
 	Nach dem \autoref{satz:35} ist $\ker f=l\Z$ für ein $l\in\N_{0}$.
 	Dabei ist $l\neq0$. Denn andernfalls wäre $\Z/\{0\}\cong\Z$. Aber $\Z$
 	ist nicht einfach. Ferner ist $l=p$ eine Primzahl. Denn andernfalls
