Beispiel statt Bemerkung referenziert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2623 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1927,7 +1927,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{proof}
 \end{satz}
 
-\begin{bsp}
+\begin{bsp}\label{bsp:61}
   Sind $G_{1}, G_{2}$ Normalteiler einer Gruppe $G$ mit $G=G_{1}\cdot G_{2}$
   und $G_{1}\cap G_{2}=1$. Dann ist $G=G_{1}\oplus G_{2}$.
 \end{bsp}
@@ -2088,7 +2088,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     $g\alpha^{k}(h^{-1})\in\ker(\alpha^{k})$ und $g=g\alpha^{k}(h)\cdot
     \alpha^{k}(h^{-1})\in\ker(\alpha^{k})\cdot \alpha^{k}(G)$. Damit ist
     $G=\ker\alpha^{k}\cdot \alpha^{k}(G)$. Die Behauptung folgt aus
-    \autoref{bem:61} \todo{In der Vorlesung war von bsp 6.1 die Rede}
+    \autoref{bsp:61}.
    .
   \end{proof}
 \end{satz}
