In Satz 10.9 fehlte ein Δ.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2625 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3716,9 +3716,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Für jede Gruppe $G$ und jede transitive $G$"~Menge $\Omega$ mit mindestens
   zwei Elementen sind äquivalent:
   \begin{enumerate}[(1)]
-   \item Es existiert eine echte Teilmenge $\Delta\subseteq\Omega$ derart,
+   \item Es existiert eine echte Teilmenge $\Delta\subsetneq\Omega$ derart,
     dass $\abs{\Delta}>1$ und für $g\in G$ entweder
-    $\vorhoch{g}\Delta\cap=\emptyset$ oder $\vorhoch{g}\Delta=\Delta$ gilt.
+    $(\vorhoch{g}\Delta)\cap\Delta=\emptyset$ oder $\vorhoch{g}\Delta=\Delta$ gilt.
    \item Es existiert eine Zerlegung $\Omega=\dotcup_{\Lambda\in\CL}
     \Lambda$,\todo{Das dotcup ist gross}
     wobei $\Lambda\subsetneq\Omega, \abs{\Lambda}>1$ und $\vorhoch{g}\Lambda\in\CL$
