Argument von Frattini eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2630 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -4116,6 +4116,17 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{proof}
 \end{satz}
 
+%satz 11.6
+\begin{satz}[Argument von \textsc{Frattini}]
+  Seien $p\in\PP, G$ eine endliche Gruppe, $K\unlhd G$ und $Q\in\Syl_{p}(K)$.
+  Dann ist $G=K\cdot N_{G}(Q)$.
+  \begin{proof}
+    Die Gruppe $G$ operiert auf $\Syl_{p}(K)$ durch Konjugation. Nach dem Satz
+    von \textsc{Sylow} (\autoref{satz:114}) operiert $K$ transitiv auf
+    $\Syl_{p}(K)$. Aus dem \autoref{satz:106} folgt also,
+    $G=K\cdot\Stb_{G}(Q)= K\cdot N_{G}(Q)$.
+  \end{proof}
+\end{satz}
 
 
 \todo[inline]{Vorlesung vom 2009-06-16}
