Das Paket index bringt viele übervolle hboxen
Mittels
\setlength{\parfillskip}{0pt plus 1fil}
lässt sich das problem umschiffen.


git-svn-id: https://svn.lug-jena.de/uni-skripte@2641 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1548,7 +1548,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{defini}[$\Omega$"~Gruppe, Operatoren]
   Sei $\Omega$ eine Menge. Eine \highl{$\Omega$"~Gruppe} ist ein Paar, das aus einer
   Gruppe $G$ und einer Abbildung $\Omega\times G\rightarrow G$ mit
-  $(\omega,g)\mapsto{}^{\omega}\!g$ mit $\vorhoch{\omega}(gh)=
+  $(\omega,g)\mapsto\vorhoch{\omega}g$ mit $\vorhoch{\omega}(gh)=
   (\vorhoch{\omega}g)(\vorhoch{\omega}h)$ für alle $\omega\in\Omega,
   g,h\in G$ besteht. Die Elemente in $\Omega$ heißen \highl{Operatoren}.
 \end{defini}
@@ -6316,6 +6316,9 @@ nachgelesen werden.
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
+% Behebt das Problem der vielen "`overfull \hbox"' im Index
+% <news:3419172.ueajl5DJLB@mjk.komascript.de>
+\setlength{\parfillskip}{0pt plus 1fil}
 \printindex
 
 \end{document}
