Neue, allgemeine TODOs eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2644 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1,6 +1,14 @@
 % TODO:
 % + Format der Übungsaufgaben ändern und im Dokument verlinken
 % + Alle Vorkommen von ≤ und ⊆ prüfen
+% + Abstände im Inhaltsverzeichnis ändern --> Overfull hbox
+% + Woher kommt die Warnung und wie kann man die abstellen:
+%    Class scrreprt Warning: \float@addtolists detected!
+%    (scrreprt)              You should use the features of package `tocbasic'
+%    (scrreprt)              instead of \float@addtolists.
+%    (scrreprt)              Support for \float@addtolists may be removed from
+%    (scrreprt)              `scrreprt' soon .
+
 
 % Einige zusätzliche Informationen für rubber
 %  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
