--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -66,6 +66,7 @@
 \usepackage{ellipsis}
 \usepackage{multirow}
 \usepackage{bigdelim}
+\usepackage{mathtools}   % Zur Definition von \abs und \norm
 
 \usetikzlibrary{through}
 
@@ -138,12 +139,12 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
+% Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
-% rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
-% ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-%\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+%\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
@@ -4180,8 +4181,7 @@ Dabei gelten folgende Begriffe:
 \begin{defi}[Galoisgruppe]
   Für jede Körpererweiterung $L\mid K$ heißt 
   \begin{gather*}
-    \Gal(L\mid K) \coloneqq \Set{\alpha \in \Aut(L) | \alpha(x) = x
-      \ \forall x\in K}
+    \Gal(L\mid K) \coloneqq \Set{\alpha \in \Aut(L) | \alpha(x) = x\ \forall x\in K}
   \end{gather*}
   \highl{Galoisgruppe} von $L\mid K$.
 \end{defi}
