Ein * an das \renewcommand (skript-check)
git-svn-id: https://svn.lug-jena.de/uni-skripte@2659 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -241,7 +241,7 @@
 % Definition wird der Wert verbessert.
 % Siehe <URL:http://projekte.dante.de/DanteFAQ/Verzeichnisse#2>
 \makeatletter
-\renewcommand{\@pnumwidth}{2em}
+\renewcommand*{\@pnumwidth}{2em}
 \makeatother
 
 \makeindex
