Zwischen \cong und , gab es einen flaschen Zeilenumbruch. Repariert.
Bei der Textstelle $\cong_{\Omega}, \Hom... machte LaTeX vor dem ,
einen Zeilenumbruch. Heiko Oberdiek erklärte, dass \cong für LaTeX ein
Relationsymbol ist. Dort darf getrennt werden. Um das zu vermeiden,
kann der Wert für \relpenalty hochgesetzt werden oder man LaTeX
überreden, die Stelle als normales Matheelement anzusehen. Ich habe
mit {...} letzteres gemacht.


git-svn-id: https://svn.lug-jena.de/uni-skripte@2660 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1627,8 +1627,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
   $f(\vorhoch{\omega}g)=\vorhoch{\omega} f(g)$ heißt
   \highl{$\Omega$"~Homomorphismus}. Wir üblich hat man auch die anderen Typen
   von Morphismen und den Begriff $\Omega$-isomorph. Die Notationen sind
-  $\cong_{\Omega}, \Hom_{\Omega}(G,H), \End_{\Omega}(H)$ und
-  $\Aut_{\Omega}(G)$.\todo{Zeilenumbruch vor dem Komma. Woran liegt das?}
+  ${\cong_{\Omega}}, \Hom_{\Omega}(G,H), \End_{\Omega}(H)$ und
+  $\Aut_{\Omega}(G)$.
 \end{defini}
 
 \begin{bsp}
