*skript.latex  + Definitionen zur Definitionsliste hinzugefügt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2670 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -316,7 +316,7 @@ Die Funktion $f$ heißt \highl[Zielfunktion]{Ziel-} oder \highl{Kostenfunktion}.
   {lokaler Minimalwert} oder (striktes) \highl[Minimum!lokales]{lokales Minimum}.
 \end{defin}
 
-\begin{defin}[globales Minimum]
+\begin{defin}[Globales Minimum]
   Ein Punkt $\tilde{x}\in\FF$ heißt \highl[Minimalpunkt!globaler]{globaler
   Minimalpunkt} von $f$ auf $\FF$ oder globale Lösung  von
   \autoref{eq:P}, falls gilt $\forall x\in\FF\colon
@@ -545,7 +545,7 @@ Optimierungsproblemen.
 \section{Lineare Optimierungsprobleme}
 
 \subsection{Standardformen von linearen Optimierungsproblemen}
-\begin{defin}
+\begin{defin}[Lineares Optimierungsproblem in allgemeiner Form]
   Ein lineares Optimierungsproblem in allgemeiner Form (LPA) ist die
   Aufgabe:
   \begin{align*}
@@ -628,7 +628,7 @@ Optimierungsproblemen.
   Nebenbedingungen $x_1, x^+_2, x^-_2\geq 0, x^+_2-x^-_2\leq 5$.
 \end{bsp}
 
-\begin{defin}
+\begin{defin}[Lineares Optimierungsproblem in kanonischer Form]
   Ein lineares Optimierungsproblem in kanonischer Form (LPK) ist die Aufgabe:
   \begin{align*}
     \min c^Tx \text{ mit } Ax\geq b, x\geq0
@@ -661,7 +661,7 @@ Optimierungsproblemen.
   \end{gather*}
 \end{bsp}
 
-\begin{defin}
+\begin{defin}[Lineares Optimierungsproblem in Normalform]
   Ein lineares Optimierungsproblem in Normalform oder Standardform ist
   die Aufgabe
   \begin{gather*}
@@ -771,7 +771,7 @@ entwickelt und ist über die Webseite \url{http://www.scilab.org/} verfügbar.
 
 \section{Konvexe Mengen}
 
-\begin{defin}
+\begin{defin}[Konvexe Menge]
   Ein Menge $C\subset\R^{n}$ heißt \highl{konvex}\index{Menge!konvexe},
   falls mit $x,y\in C$ und $\alpha\in(0,1)$ auch der Punkt
   $(1-\alpha)x+ \alpha y$ Element von $C$ ist.
@@ -847,7 +847,7 @@ entwickelt und ist über die Webseite \url{http://www.scilab.org/} verfügbar.
   Polyeder ist.
 \end{bsp}
 
-\begin{satz}
+\begin{satz}[Lineare Optimierung auf konvexen Mengen]
   \label{satz:218-lokglobLsg}
   Ist $c\in\R^{n}$ und $K\subset \R^{n}$ nichtleer und konvex, dann
   ist jede lokale Lösung des Problems $\min c^{T}x$ \unb $x\in K$ auch
@@ -891,7 +891,7 @@ entwickelt und ist über die Webseite \url{http://www.scilab.org/} verfügbar.
   $f((1-\alpha) x+\alpha y)=(1-\alpha)x+\alpha y$.
 \end{bem*}
 
-\begin{defin}
+\begin{defin}[Konvexkombination]
   Eine \highl{Konvexkombination} von Punkten
   $x^{(1)},\ldots,x^{(k)}\in\R^{n}$ ist ein Punkt der Form
   $\sum_{i=1}^{k} \alpha_{i} x^{(i)}$ mit $\alpha_{i}\geq 0,
@@ -924,7 +924,7 @@ entwickelt und ist über die Webseite \url{http://www.scilab.org/} verfügbar.
   \end{proof}
 \end{satz}
 
-\begin{defin}
+\begin{defin}[Konvexe Hülle]
   Sei $A\in\R^{n}$ beliebig. Die \highl[Hülle!konvexe]{konvexe
   Hülle} von $A$ ist die Menge
  	\begin{gather*}
@@ -953,7 +953,7 @@ Ziel dieses Abschnittes ist, zu zeigen, wenn ein lineares
 Optimierungsproblem eine Lösung hat, existiert eine Ecke, die Lösung
 ist.
 
-\begin{defin}[geometrische Definition einer Ecke]
+\begin{defin}[Geometrische Definition einer Ecke]
   Sei $\FF$ die zulässige Menge eines linearen Optimierungsproblems.
   Dann heißt ein Punkt $x\in\FF$ \highl{Ecke} von $\FF$,
   falls $x$ nicht als Konvexkombination $x=(1-\alpha)y+\alpha z$ mit
@@ -1002,7 +1002,7 @@ Es gibt folgende Spezialfälle:
   Spezialfall: Der Rang der Matrix $A$ ist gleich $m$.
 \end{itemize}
 
-\begin{satz}
+\begin{satz}[Charakterisierung einer Ecke]
   \label{satz:228}
   Sei $\FF=\set{x\in\R^{n}| Ax=b, x\geq 0_{n}}, A\in\R^{m\times n},
   b\in\R^{m}, m\leq n$ die zulässige Menge eines linearen
@@ -1419,7 +1419,7 @@ x_{B}=b$.
   \Leftrightarrow A_{B} x_{B}=b$
 \end{bsp}
 
-\begin{satz}[allgemeine Charakterisierung einer Ecke]
+\begin{satz}[Allgemeine Charakterisierung einer Ecke]
   Sei $\FF= \set{x\in\R^{n}| Ax=b, x\geq 0}$ zulässige Menge eines
   linearen Optimierungsproblems in Standardform, $A\in\R^{m\times n},
   m\leq n, \rg(A)=m, b\in\R^{m}$. Ein Punkt $x\in\FF$ ist genau dann Ecke von
@@ -1717,7 +1717,7 @@ Nunmehr stellt sich die Frage, ob die Bedingung $s_{N}^{T}\geq 0$ auch
 notwendig ist. Dies ist mit ja zu beantworten, falls die Ecke $x^{*}$
 nicht entartet ist.
 
-\begin{defin}
+\begin{defin}[Nicht entartete Basislösung]
   Sei $A\in\R^{m\times n}$ mit $\rg(A)=m\leq n, b\in\R^{m}, \FF=
   \set{x\in\R^{n}| Ax=b, x\geq 0}, B$ Basis von $A$. Eine zulässige
   Basislösung $x\in\FF$ heißt \highl{nicht entartet}, wenn $x_{B}>0$.
@@ -1995,7 +1995,7 @@ ausgeführt:
 
 \subsection{Konvergenz des Simplexverfahrens}
 
-\begin{satz}
+\begin{satz}[Konvergenz des Simplexverfahrens]
   Sind alle Ecken $x^{(k)}$ zu den berechneten Basen $B^{(k)}$ nicht
   entartet, dann stoppt das Verfahren nach endlich vielen Schritten
   mit einer optimalen Basis oder das Unbeschränktheitskriterium ist
@@ -2365,7 +2365,7 @@ den Basistausch.
 
 \subsection{Die lexikografische Zusatzregel}
 
-\begin{defin}
+\begin{defin}[Lexikografisch positive Vektoren]
   Ein Vektor $x\in\R^{n}\setminus\{0_{n}\}$ heißt
   \highl{lexikografisch positiv}, wofür wir $x\succ 0_{n}$ bzw. $0_n\prec x$ 
   schreiben, wenn die erste von Null verschieden Komponente größer als Null
@@ -2628,8 +2628,8 @@ Das Lemma sagt uns: Nach Anwendung der Phase~2 des Simplexverfahrens
 auf das Hilfsproblem gibt es zwei Möglichkeiten. Für die berechnete
 Lösung gilt:
 \begin{enumerate}
- \item $\tilde{c}^{T} \tilde{z}>0$: \emph{Stoppe} das Verfahren, dann
-  $\FF0=$.
+ \item $\tilde{c}^{T} \tilde{z}>0$: \emph{Stoppe} das Verfahren, denn
+  $\FF=\emptyset$.
  \item $\tilde{c}^{T}\tilde{z}=0$: (Damit ist auch $\tilde{y}=0_{m}$).
   Dies ist noch genauer zu untersuchen.
 \end{enumerate}
@@ -3007,7 +3007,7 @@ Wegen \autoref{eq:42} ist das System aus \autoref{eq:44} äquivalent zu:
     D & 0,6 & 0,25 & 1 & 232,5\\
     \bottomrule
     Preis & 41 & 35 & 96 &
-  \end{tabular}
+  \end{tabular}\\
   Das Ausgangs- oder primale Problem war die Herstellung einer
   Mischung, die den Nährstoffbedarf deckt und möglichst billig ist.
   Als lineares Problem:
@@ -3410,7 +3410,7 @@ Wir betrachten das lineare Problem:
   x\in\FF_{P}=\{x\in\R^{n}\colon Ax=b, x\geq0\}\nonumber
 \end{gather}
 
-\begin{defin}
+\begin{defin}[Innerer zulässiger Punkt]
   Ein Vektor $x\in\R^{n}$ heißt \highl[Punkt!innerer
   zulässiger]{innerer zulässiger Punkt} von (LP), wenn $x\in\FF_{P}$
   und $x>0$ ist.
@@ -3425,7 +3425,7 @@ Wir betrachten das lineare Problem:
   $x^{(k)}$ einen besseren Punkt $x^{(k+1)}$ berechnen kann.
 \end{bem}
 
-\begin{defin}
+\begin{defin}[Zulässige Richtung]
   Eine Richtung $d\in\R^{n}$ heißt
   \highl[Richtung!zulässige]{zulässige Richtung} von $x^{(k)}$, wenn
   ein $\overline{\sigma}>0$ existiert, so dass:
@@ -3447,7 +3447,7 @@ Wir betrachten das lineare Problem:
   Richtungen.
 \end{bem}
 
-\begin{defin}
+\begin{defin}[Zulässige Abstiegsrichtung]
   Eine Richtung $d\in\R^{n}$ heißt
   \highl[Abstiegsrichtung!zulässige]{zulässige Abstiegsrichtung}, wenn
   $d$ zulässige Richtung ist und es gilt:
@@ -3490,7 +3490,7 @@ nach dem Satz von Weierstraß, dass (AS) eine Lösung hat.
 Im $k$-ten Iterationsschritt wollen wir $\norm{\cdot}_{b}$ als Norm
 wählen.
 
-\begin{defin}
+\begin{defin}[Ellipsoid]
   Sei $Q\in\R^{n\times n}$ mit $\rg(Q)=n, x\in\R^{n}, \rho\prec 0$.
   Dann heißt die durch
   \begin{gather*}
@@ -3588,7 +3588,7 @@ wählen.
   \end{proof}
 \end{satz}
 
-Die Lösungsformel fpr $y^{(k)}$ ist eine theoretische Formel. Zur
+Die Lösungsformel für $y^{(k)}$ ist eine theoretische Formel. Zur
 praktischen Berechnung von $y^{(k)}$ löst man das lineare
 Gleichungssystem
 \begin{gather}\label{eq:56}
@@ -4108,6 +4108,7 @@ A\tilde{x}= b, \tilde{x}\geq0$, d.\,h. $\tilde{x}\in\FF_{p}$ und $\FB^{*}=
 %% Anhang
 \appendix
 \chapter{Klausuraufgaben}
+\subsection*{(SS 2006)}
 
 \begin{enumerate}
  \item Gegeben sei das Problem $\max c^{T}x$ unter den Nebenbedigungen
@@ -4130,7 +4131,7 @@ A\tilde{x}= b, \tilde{x}\geq0$, d.\,h. $\tilde{x}\in\FF_{p}$ und $\FB^{*}=
  \item Die Niveaumenge einer Funktion $f\colon D(f)\rightarrow \R$ zum
   Niveau $\alpha\in\R$ ist gegeben durch
   \begin{gather*}
-    \mathcal{N}(f, \alpha)=\{x\in D(f)| f(x)\leq a\}
+    \mathcal{N}(f, \alpha)=\{x\in D(f)| f(x)\leq \alpha\}
   \end{gather*}
   Zeigen Sie, dass die Niveaumenge einer \emph{konvexen Funktion}
   ebenfalls konvex ist, vorausgesetzt sie ist nichtleer. Definieren
