--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -62,7 +62,7 @@
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
-
+\usepackage{mathtools}   % Zur Definition von \abs und \norm
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -145,23 +145,12 @@
 %% unter den Nebenbedingungen ist auch zu lang zum Eintippen
 \newcommand*{\unb}{unter den Nebenbedingungen\xspace}
 
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw\mspace{8mu}}%
-% 			       {$gdw$\xspace}}
-% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-% 			       {$gdw_{def}$\xspace}}
-
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. (Vorschlag
 % ist aus amsldoc) \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
-\newcommand*{\abs}[2][]{#1\lvert#2#1\rvert}
-\newcommand*{\norm}[2][]{#1\lVert#2#1\rVert}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 % Das original Epsilon sieht nicht so toll aus
 \renewcommand*{\epsilon}{\varepsilon}
