--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -105,6 +105,7 @@
 \newcommand*{\verfautorefname}{Verfahren}
 \newcommand*{\lemmaautorefname}{Lemma}
 \newcommand*{\korautorefname}{Korollar}
+\newcommand*{\proofautorefname}{Beweis}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
