--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -59,6 +59,10 @@
 \usepackage{booktabs}    %% schöne Linien in Tabelle
 \usepackage{wasysym}
 \usepackage{txfonts}
+\usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
+                         % Markierungen für offene Aufgaben zu setzen; wird
+                         % auch für \help (s.u.) verwendet
+
 
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
@@ -124,10 +128,7 @@
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
 % auszublenden, indem man den Befehl einfach leer definiert
-\newcommand*{\help}[1]{\textcolor{green}{help: #1}}
-
-% \todo ist das gleiche wie \help nur für offene Aufgaben
-\newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
+\newcommand*{\help}[1]{\todo[color=green!40]{#1}}
 
 % Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
