--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -2595,9 +2595,9 @@ Basislösung. Einträge für das Starttableau:
  vielen Schritten eine Ecke für folgendes Starttableau:
 
 \begin{tabular}{c|c|c|c}
-  & $(1\,...\,n)$ & & $(n+1\,...\,n+m)$\\
+  & $(1\,\dotsc\,n)$ & & $(n+1\,\dotsc\,n+m)$\\
   \toprule
-  $\begin{pmatrix}n+1\\...\\n+m\end{pmatrix}$ & $A$ & $b$ &
+  $\begin{pmatrix}n+1\\ \dotsc \\n+m\end{pmatrix}$ & $A$ & $b$ &
      $I_{m}$\\
   \bottomrule
   & $-e^{T}A$ & $e^{T}b$ & $e^{T}$
