--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -249,6 +249,72 @@ und für die Vorlesung lernen wollt, haltet euch an die Homepage des
   und Informationssysteme}.
 
 
+\chapter{Einleitung}
+\label{cha:einleitung}
+
+
+Zu Anfang wollen wir uns die Frage stellen, ob wir Datenbanksysteme
+überhaupt brauchen. Haben diese einen Nutzen, sind das nur Konstrukte
+der Theorie oder gibt es Probleme, die sich damit lösen lassen?
+Schließlich könnte man auf die Idee kommen, alle seine Daten auf einem
+Datenträger abzulegen. Das heißt, diese auf der Festplatte, USB"=Stick
+oder ähnlichem zu speichern. Von dort werden die Daten dann wieder
+abgerufen und alles ist gut.
+
+Bei großen Datenmengen und Zugriff von verschiedenen Seiten ist
+schnell klar, dass dieser Weg nicht korrekt sein kann. Man stelle sich
+eine große Firma vor, die deren Mitarbeiterstammdaten verwaltet. Für
+jeden Mitarbeiter wird eine Datei angelegt. Schon bei einer geringen
+Zahl an Mitarbeitern wird die Suche nach dem korrekten Datensatz
+problematisch. Insbesondere wenn mehrere den gleichen Namen
+besitzen. Weiterhin entstehen Probleme, wenn mehrere Kollegen auf
+denselben Datensatz schreibend zugreifen. Diese Probleme erweitern
+sich schnell, wenn die Datensätze ausgewertet werden sollen,
+d.\,h. wie ist das Durchschnittsgehalt in der Abteilung oder der
+Firma, wer wurde nach September 1996 eingestellt etc.
+
+
+Daher kann eine solche Datenhaltung nicht (in allen Fällen) der
+richtige Weg sein. Welche Anforderungen sollte man an ein
+Datenbanksystem stellen?
+\begin{description}
+\item[Persistente Datenhaltung] Nach dem Abschluss einer Transaktion
+  (Speichern) bleibt das Ergebnis dauerhaft erhalten.
+\item[Große Datenmenge] Das Datenbanksystem soll mit beliebig großen
+  Datenmengen (Tera-, Petabyte etc.) umgehen können.
+\item[Hohe Verfügbarkeit] Datenbestände sollen 24/7 abruf- und
+  bearbeitbar sein. Gerade bei großen Webseiten gibt es keine
+  Wartungsfenster mehr. Vielmehr muss diese rund um die Uhr online sein.
+\item[Flexibilität] Das Datenbanksystem muss in verschiedener Weise
+  Flexibilität garantieren können. Dazu gehört, dass Daten flexibel
+  ausgewertet werden können.
+  \begin{itemize}
+  \item Welche Daten haben Eigenschaft x?
+  \item Welche Daten sind größer als y?
+  \item Welche Daten haben Eigenschaft x und sind größer als y?
+  \item etc.
+  \end{itemize}
+  Weiterhin sollen die Daten nicht notwendigerweise nur an einem
+  Standort gespeichert werden. Vielmehr ist es sinnvoll, Datensätze zu
+  verteilen und trotzdem eine Auswertbarkeit \emph{aller} Daten zu
+  haben. Große Anbieter benötigen die Möglichkeit der
+  Lastverteilung. Das heißt, es wird von vielen Rechnern auf einem
+  Datenbestand zugegriffen. Ein Beispiel sind die Server der Wikipedia.
+\item[Benutzerfreundlichkeit] Die Datenabfrage soll so
+  benutzerfreundlich wie möglich sein.
+\item[Sicherheit] Der Punkt Sicherheit hat wieder mehrere Aspekte. Zum
+  einen soll es Sicherheit vor Datenverlsut geben. Also auch bei einem
+  plötzlichen Ausfall des Servers sollen die Daten nicht komplett
+  verloren sein. Weiterhin sollte kein Unbefugter auf Daten zugreifen
+  oder diese gar ändern können. Insbesondere ist die Rechteverwaltung
+  granular, d.\,h. man kann angeben, wer Daten nur lesen, schreiben
+  etc. darf.
+\end{description}
+Weitere Anforderungen sind denkbar.
+
+Eine Datenhaltung auf Dateisystemebene erfüllt die oben genannten
+Anforderungen nur in sehr beschränkter Art und Weise. Die
+Datenbanktechnik soll daher eine Antwort geben.
 
 \clearpage
 \appendix
